# previsao_temperatura

./: README.md  modelo_lstm_generalizado.h5  pyproject.toml  rede_neural_generalizada.ipynb
