[project]
name = "tcc-previsao-temperatura"
version = "0.1.0"
description = "Previsão de temperatura de São Luís - MA utilizando redes neurais"
authors = [
    {name = "Renato Ubaldo",email = "renatoub@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "tensorflow-io-gcs-filesystem (>=0.31.0,<0.38.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
